Did some clean up and quick review. Notably changed the name of the UriPar class and solution to UriParser.

--- a/UriPar/UriPar.vcxproj.filters
+++ b/UriPar/UriPar.vcxproj.filters
@@ -21,12 +21,12 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UriPar.h">
+    <ClInclude Include="UriParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="UriPar.cpp">
+    <ClCompile Include="UriParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
