--- a/UriParTesting/UriParTesting.vcxproj.filters
+++ b/UriParTesting/UriParTesting.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UriParTesting.cpp">
+    <ClCompile Include="UriParserTesting.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
