Moved to a templated header implementation, removed reference to static lib in testing project. Still passing all tests for char/string. Next will be wchar_t/wstring.

--- a/UriPar/UriPar.vcxproj
+++ b/UriPar/UriPar.vcxproj
@@ -132,10 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="UriParser.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="UriParser.cpp" />
+    <ClInclude Include="UriParser.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
