--- a/UriPar/UriPar.vcxproj.filters
+++ b/UriPar/UriPar.vcxproj.filters
@@ -21,13 +21,8 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UriParser.h">
+    <ClInclude Include="UriParser.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="UriParser.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
 </Project>
